Infrastructure/terraform/aks/k8s/4-votes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-votes
  name: api-votes
  namespace: bootcamp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-votes
  template:
    metadata:
      labels:
        app: api-votes
    spec:
      containers:
      - image: bootcampici.azurecr.io/votesapi
        imagePullPolicy: Always
        name: api-votes
        ports:
          - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
