Infrastructure/terraform/aks/k8s/7-votes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: votes-svc
  namespace: bootcamp
spec:
  type: ClusterIP
  ports:
  - name: "http-80"
    port: 80
    targetPort: 80
  selector:
    app: api-votes
