Infrastructure/terraform/aks/k8s/9-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-election
  namespace: bootcamp
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: election.1dff985c90ef461b8526.eastus.aksapp.io
      http:
        paths:
          - path: /candidates(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: candidates-svc
                port:
                  number: 80
          - path: /votes(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: votes-svc
                port: 
                  number: 80
          - path: /reports(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: reports-svc
                port: 
                  number: 80
